<resources>
    <string name="app_name">简诗</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_date_choose">DateChooseActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="title_activity_diary_view">DiaryViewActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="logo_name">简诗</string>
    <string name="logo_slogan">简单的小诗，简单的生活</string>
    <string name="write">撰</string>
    <string name="read">阅</string>
    <string name="setting">置</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="edit_title_hint">标题</string>
    <string name="edit_content_hint">讲述你的故事&#8230;</string>
    <string name="edit">辑</string>
    <string name="edit_save">存</string>
    <string name="edit_saving">保存中&#8230;</string>
    <string name="save_success">保存成功!</string>
    <string name="save_failure">保存失败&#8230;</string>
    <string name="want_to_save">是否要保存？</string>
    <string name="edit_content_not_null">抱歉，内容不能为空</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="do_you_want_to_delete_diary">确定要删除？</string>
    <string name="delete_diary_failure">删除失败，请重试</string>
    <string name="space_of_date_record">\n\n\n</string>
    <string name="record">记</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="user_setting">设置</string>
    <string name="vertical_reading">竖排文字阅读</string>
    <string name="customize_background_color">更换背景颜色</string>
    <string name="support_info">支持信息</string>
    <string name="user_feedback">反馈</string>
    <string name="feedback_email_subject">关于&lt;简诗&gt;的二三意见</string>
    <string name="feedback_email_prefix">Hi,亲爱的简诗开发者们!\n&#160;&#160;&#160;&#160;我希望向亲们提出如下意见：</string>
    <string name="send_email">发送邮件</string>
    <string name="email_client_no_found">未找到任何邮箱客户端，请安装</string>
    <string name="please_choose_day">请选择日期</string>
    <string name="please_choose_month">请选择月份</string>
    <string name="illegal_choose_date">你所选择的日期不合法</string>

    <!--upgrade-->
    <string name="upgrade_title">小小的升级只为追求更好</string>


    <string-array name="edit_content_hint_array">
        <item>美好的一天，给自己写句鼓励吧&#8230;</item>
        <item>给精彩的一天作个计划吧&#8230;</item>
        <item>宁静的午后，文字相伴&#8230;</item>
        <item>午后，来杯咖啡，写写文字&#8230;</item>
        <item>落日余晖，是否感慨&#8230;</item>
        <item>深夜了，心事诉于此&#8230;</item>
        <item>亲爱的，明天见&#8230;</item>
        <item>@string/edit_content_hint</item>
    </string-array>
    <string-array name="edit_title_hint_array">
        <item>清晨</item>
        <item>上午</item>
        <item>午间</item>
        <item>午后</item>
        <item>落日</item>
        <item>夜深</item>
        <item>晚安</item>
        <item>@string/edit_title_hint</item>
    </string-array>

    <!--three-line poems, use ',' to split into a three-line poem -->
    <string name="three_line_poem_default">
        白纸。黑字-一堆-醒着的历史
    </string>
    <string-array name="three_line_poem_array">
        <item>
            日出江花红胜火-春来江水绿如蓝-能不忆江南
        </item>
        <item>
            白纸。黑字-一堆-醒着的历史
        </item>
        <item>
            春色三分-二分尘土-一分流水
        </item>
        <item>
            滿眼遊絲兼落絮-紅杏開時-一霎清明雨
        </item>
        <item>
            单身这场旅行-走得太远-忘了归路
        </item>
        <item>
            流浪的-鳥-何處是歸巢
        </item>
        <item>
            转朱阁-低绮户-照无眠
        </item>
        <item>
            @string/three_line_poem_default
        </item>
    </string-array>
    <string name="three_line_string_split">-</string>

    <string-array name="three_line_poem_array_2">
        泥泥泞泞的小路-淅淅沥沥的雨声-山村的灯火依然通红
        墙里秋千墙外道。墙外行人，墙里佳人笑。
        云雾簇拥,高高在上-令平原仰首翘望-一只雄鹰正展翅高飞
    </string-array>

    <string name="please_choose_bg_color">选择你偏爱的背景颜色</string>
    <string name="unknown_color">未知颜色</string>
</resources>
