<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/NormalBgLeftRightPadding"
                tools:context="com.wingjay.jianshi.ui.EditActivity">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title_hint"
        android:layout_marginTop="@dimen/normal_text_size"
        style="@style/EditTextTitleStyle"
        />

    <ScrollView
        android:id="@+id/edit_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_title"
        android:layout_marginTop="@dimen/normal_text_size"
        android:scrollbars="none"
        >

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_content_hint"
            android:gravity="top"
            style="@style/EditTextContentStyle"
            android:paddingBottom="@dimen/super_huge_text_size"
            />

    </ScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/normal_text_size"
        >

        <com.wingjay.jianshi.ui.view.RedPointView
            android:id="@+id/edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:text="@string/edit_save"
            />

    </FrameLayout>

</RelativeLayout>
