<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/NormalBg"
                android:orientation="vertical"
                tools:context="com.wingjay.jianshi.ui.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/user_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:layout_marginBottom="@dimen/small_text_size"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_text_size"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical_reading"
                    android:layout_gravity="center_vertical"
                    style="@style/TextStyle"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/vertical_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/normal_text_size"
        >

        <TextView
            android:text="@string/support_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:layout_marginBottom="@dimen/small_text_size"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border"
            android:orientation="vertical"
            >

            <FrameLayout
                android:id="@+id/send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_text_size"
                style="@style/PressableBg"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_feedback"
                    style="@style/TextStyle"
                    android:layout_gravity="center_vertical"
                    />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
