<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/NormalBg"
                tools:context="com.wingjay.jianshi.ui.DateChooseActivity">

    <RelativeLayout
        android:layout_width="@dimen/red_circle_size"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <com.wingjay.jianshi.ui.view.RedPointView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_text_size"
            app:text="@string/setting"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/red_circle_size"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

            <ScrollView
                android:id="@+id/right_top_bar"
                android:layout_width="@dimen/red_circle_size"
                android:layout_height="match_parent"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <com.wingjay.jianshi.ui.view.VerticalTextView
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:gravity="center_horizontal"
                        />

                    <com.wingjay.jianshi.ui.view.VerticalTextView
                        android:id="@+id/month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:gravity="center_horizontal"
                        />

                    <com.wingjay.jianshi.ui.view.VerticalTextView
                        android:id="@+id/day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:textColor="@color/bright_red"
                        android:gravity="center_horizontal"
                        />

                    <com.wingjay.jianshi.ui.view.RedPointView
                        android:id="@+id/writer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/normal_text_size"
                        app:text="@string/write"
                        />

                    <com.wingjay.jianshi.ui.view.RedPointView
                        android:id="@+id/reader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/normal_text_size"
                        app:text="@string/read"
                        />

                </LinearLayout>

            </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/red_circle_size"
        android:layout_marginStart="@dimen/red_circle_size"
        android:layout_marginEnd="@dimen/red_circle_size"
        android:layout_marginRight="@dimen/red_circle_size"
        >

        <com.wingjay.jianshi.ui.view.DayChooser
            android:id="@+id/day_chooser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>

